feat: Add complete vendor API with CRUD operations and data seeding
- Add vendor content type with full schema definition
- Implement vendor controller with custom filtering and validation
- Add vendor routes including core CRUD operations
- Create vendor service with business logic methods
- Add contact info component for vendor data
- Include comprehensive data seeding scripts
- Add npm scripts for vendor operations
- Include API documentation and setup guides
- Fix TypeScript linter errors in vendor controller
- Add database migration for vendors table

--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "seed:vendors": "node scripts/seed-vendors.js",
+    "insert:vendors": "node scripts/insert-new-vendors.js",
+    "insert:vendors:direct": "node scripts/insert-vendors-direct.js",
+    "insert:vendors:final": "node scripts/insert-vendors-final.js",
+    "test:vendors": "node scripts/test-vendor-api.js",
+    "migrate": "strapi database:migrate",
+    "migrate:rollback": "strapi database:migrate:rollback"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.20.0",
     "@strapi/plugin-users-permissions": "5.20.0",
     "@strapi/strapi": "5.20.0",
+    "@types/pg": "^8.15.5",
+    "axios": "^1.11.0",
     "better-sqlite3": "11.3.0",
+    "pg": "^8.16.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
